--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: #333;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+  color: #a635f1;
+}
+.navbar .links {
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #f1356d;
+}
+.content {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 20px;
+}
+.gameprogress h3 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.gameprogress label {
+  margin-right: 40px;
+  margin-left: 10px;
+}
+.gameprogress input {
+  height: 20px;
+  width: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gameinfo h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.gameinfo input {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border-width: 0.5px;
+  height: 30px;
+  width: 550px;
+}
+.gameinfo button {
+  height: 40px;
+  width: 80px;
+  background-color: #a635f1;
+  color: #f2f2f2;
+  font-size: small;
+  font-weight: bold;
+  border-radius: 20px;
+  border-width: 0px;
 }
