Addition of homepage and create catalogue -Doroteo

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,13 @@
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
   color: #a635f1;
+  font-size:xx-large;
 }
 .navbar .links {
   margin-left: auto;
