Addition of Sign in page -Doroteo

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,19 @@
   border-radius: 15px;
   border-width: 0px;
 }
+
+.signin .content {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 30px;
+  border: 2px dotted #2e2e2e;
+  border-radius: 20px;
+}
+.signin h1 {
+  color: #7a26b3;
+  font-size:xx-large;
+}
+.signin .label {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
