--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
 /* base styles */
 * {
   margin: 0;
@@ -81,4 +83,20 @@
   font-weight: bold;
   border-radius: 15px;
   border-width: 0px;
+}
+
+.signin .content {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 30px;
+  border: 2px dotted #2e2e2e;
+  border-radius: 20px;
+}
+.signin h1 {
+  color: #7a26b3;
+  font-size:xx-large;
+}
+.signin .label {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
