--- a/src/index.css
+++ b/src/index.css
@@ -127,11 +127,13 @@
   /* background-color: aquamarine; */
   height: 800px;
   width: 1000px;
+  margin-top: 10px;
 
+  max-height: 1000px;
   max-width: 100%;
 
   display: grid;
-  grid-template: 1fr 2fr 3fr / 3fr 2fr;
+  grid-template: 1fr 2fr 3fr / 2fr 1fr;
   gap: 10px;
   grid-template-areas:
     "welcome welcome"
@@ -140,36 +142,160 @@
 }
 
 .welcome {
-  background-color: coral;
+  background-color: #8c5faa;
   grid-area: welcome;
+  border-radius: 10px;
+
+  display: grid;
+  place-items: center;
 }
 
 .content1 {
-  background-color: darkseagreen;
+  background-color: #8c5faa;
   grid-area: content1;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.content1 h3 {
+  margin-left: 5px;
+  margin-bottom: 5px;
+  color: white;
+}
+
+.square-start-button {
+  display: inline-block;
+  width: 90%;
+  height: 35px;
+  background: #210b24;
+  margin-top: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 5px;
+  border-width: thick;
+
+  display: grid;
+  place-items: center;
+  align-self: center;
 }
 
 .content2 {
-  background-color: limegreen;
+  background-color: #8c5faa;
   grid-area: content2;
+  border-radius: 10px;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .content3 {
-  background-color: silver;
+  background-color: #8c5faa;
   grid-area: content3;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.content3 a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  color: white;
+  font-size: 18px;
+}
+
+.content3 p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 10px;
+  margin-bottom: 10px;
+
+  display: inline-block;
+  width: 250px;
+  height: auto;
+  padding: 5px;
+  background: #451e4a;
+  border-radius: 5px;
+}
+
+a:hover {
+  color: #fffdd0;
+}
+
+.homepage h2 {
+  margin-left: 10px;
+  color: #fffdd0;
+}
+
+img.homepage-image {
+  border-radius: 10px;
+  height: auto;
+  width: auto;
+  align-self: center;
+}
+
+.square-title {
+  display: inline-block;
+  width: 100%;
+  height: 35px;
+  background: #210b24;
+  margin-bottom: 15px;
+  padding-top: 5px;
+  border-radius: 5px;
+}
+
+.square-title-news {
+  display: inline-block;
+  width: 260px;
+  height: 35px;
+  background: #210b24;
+  margin-bottom: 15px;
+  padding-top: 5px;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 1000px) {
   .homepage {
-    height: 120vh;
-    width: 100vw;
+    height: 160vh;
+    /* width: 100vw; */
+    /* min-width: none;
+    min-height: none; */
+    /* max-width: 1000px; */
+    /* overflow: auto; */
     max-width: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr 4fr 5fr 6fr;
+    max-height: 100%;
+    grid-template-columns: auto;
+    /* grid-auto-columns: min-content; */
+    /* grid-template-columns: repeat(auto-fit, minmax(1000px, 1fr)); */
+    grid-template-rows: 1.4fr auto auto auto;
     grid-template-areas:
       "welcome"
       "content1"
       "content2"
       "content3";
+  }
+
+  .content3 p {
+    width: 100%;
+  }
+
+  .square-title-news {
+    width: 100%;
   }
 }
