--- a/src/index.css
+++ b/src/index.css
@@ -125,9 +125,10 @@
 
 .homepage {
   /* background-color: aquamarine; */
-  height: 800px;
+  height: auto;
   width: 1000px;
   margin-top: 10px;
+  margin-bottom: 10px;
 
   max-height: 1000px;
   max-width: 100%;
@@ -148,6 +149,20 @@
 
   display: grid;
   place-items: center;
+}
+
+img.homepage-banner-image {
+  border-radius: 10px;
+  height: auto;
+  width: auto;
+  align-self: center;
+}
+
+img.homepage-bottom-image {
+  border-radius: 10px;
+  height: 300px;
+  width: auto;
+  align-self: center;
 }
 
 .content1 {
@@ -227,7 +242,7 @@
   margin-bottom: 10px;
 
   display: inline-block;
-  width: 250px;
+  width: auto;
   height: auto;
   padding: 5px;
   background: #451e4a;
@@ -243,13 +258,6 @@ a:hover {
   color: #fffdd0;
 }
 
-img.homepage-image {
-  border-radius: 10px;
-  height: auto;
-  width: auto;
-  align-self: center;
-}
-
 .square-title {
   display: inline-block;
   width: 100%;
@@ -262,7 +270,7 @@ img.homepage-image {
 
 .square-title-news {
   display: inline-block;
-  width: 260px;
+  width: 100%;
   height: 35px;
   background: #210b24;
   margin-bottom: 15px;
@@ -297,5 +305,9 @@ img.homepage-image {
 
   .square-title-news {
     width: 100%;
+  }
+
+  img.homepage-bottom-image {
+    height: auto;
   }
 }
